tests/baselines/reference/parserIndexSignature8.errors.txt
==== tests/cases/compiler/parserIndexSignature8.ts (2 errors) ====
    var foo: { [index: any]; }; // expect an error here
                ~~~~~~~~~~
!!! parserIndexSignature8.ts(1,13): error TS1023: Index signature parameter type must be 'string' or 'number'.
    var foo2: { [index: RegExp]; }; // expect an error here
                 ~~~~~~~~~~~~~
!!! parserIndexSignature8.ts(2,14): error TS1023: Index signature parameter type must be 'string' or 'number'.
    